doc-updated TOC.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -6,10 +6,20 @@
    "metadata": {},
    "source": [
     "# Week 2: Recommender Systems\n",
-    "\n",
-    "* [Making Recommendations](#making-recommendations)\n",
-    "* [Using per-item features](#using-per-item-features)\n",
-    "* "
+    "---\n",
+    "## Table of Contents\n",
+    "* [Making Recommendations](#Making-Recommendations)\n",
+    "* [Using per-item features](#Using-per-item-features)\n",
+    "* [Collaborative filtering algorithm](#Collaborative-filtering-algorithm)\n",
+    "* [Binary labels: favs, likes and clicks](#Binary-labels-favs-likes-and-clicks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "820d2506-955d-4f91-bd5f-19cfd3a2a2bd",
+   "metadata": {},
+   "source": [
+    "<br>"
    ]
   },
   {
@@ -44,6 +54,14 @@
     "* The subsequent lesson will begin developing an algorithm to **predict the missing ratings**.\n",
     "* **Initial Assumption:** The first model will temporarily assume that **features (extra information)** about the movies (e.g., whether it is a romance movie or an action movie) are already available.\n",
     "* **Future Topic:** Later in the notes, we will address how to build the system when these explicit movie features are **not available**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d27fe117-e203-4d24-951e-5556e3a65fd6",
+   "metadata": {},
+   "source": [
+    "<br>"
    ]
   },
   {
