doc-updated 'Making Recommendations'

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -11,7 +11,7 @@
     "* [Making Recommendations](#Making-Recommendations)\n",
     "* [Using per-item features](#Using-per-item-features)\n",
     "* [Collaborative filtering algorithm](#Collaborative-filtering-algorithm)\n",
-    "* [Binary labels: favs, likes and clicks](#Binary-labels-favs-likes-and-clicks)"
+    "* [Binary labels: favs, likes and clicks](#Binary-labels:-favs,-likes-and-clicks)"
    ]
   },
   {
@@ -32,28 +32,23 @@
     "This section introduces the topic of Recommender Systems, highlighting their significant commercial impact and setting up the basic framework and notation using the example of movie rating prediction.\n",
     "\n",
     "---\n",
-    "\n",
-    "### Key Bullet Points: Introduction to Recommender Systems\n",
-    "\n",
-    "#### Commercial Importance\n",
+    "### Commercial Importance\n",
     "* **Widespread Use:** Recommender systems are used everywhere online (e.g., shopping sites like Amazon, streaming services like Netflix, food delivery apps).\n",
     "* **High Value:** For many companies, a large fraction of sales and economic value is directly driven by the success of their recommender systems.\n",
-    "* **Academic vs. Commercial Attention:** The commercial impact of recommender systems is arguably **vastly greater** than the attention it receives in academia.\n",
+    "* **Academic vs. Commercial Attention:** The commercial impact of recommender systems is arguably vastly greater than the attention it receives in academia.\n",
     "\n",
-    "#### Core Framework (Movie Rating Example)\n",
+    "### Core Framework (Movie Rating Example)\n",
     "The goal is to predict how users would rate movies they haven't yet watched (denoted by '?') to decide what to recommend.\n",
     "\n",
     "| Item | Notation | Definition/Example |\n",
     "| :--- | :--- | :--- |\n",
     "| **Number of Users** | $n_u$ | In the example, $n_u = 4$ (Alice, Bob, Carol, Dave). |\n",
     "| **Number of Items (Movies)** | $n_m$ | In the example, $n_m = 5$. |\n",
-    "| **Rating Indicator** | $r(i, j)$ | A binary value: $r(i, j) = 1$ if **user $j$ has rated movie $i$**; $0$ otherwise. |\n",
+    "| **Rating Indicator** | $r(i, j)$ | A binary value: $r(i, j) = 1$ if user $j$ has rated movie $i$; $0$ otherwise. |\n",
     "| **Actual Rating** | $y^{(i, j)}$ | The rating (0 to 5 stars) given by user $j$ to movie $i$. (E.g., $y^{(3, 2)} = 4$). |\n",
     "\n",
     "### Next Step\n",
-    "* The subsequent lesson will begin developing an algorithm to **predict the missing ratings**.\n",
-    "* **Initial Assumption:** The first model will temporarily assume that **features (extra information)** about the movies (e.g., whether it is a romance movie or an action movie) are already available.\n",
-    "* **Future Topic:** Later in the notes, we will address how to build the system when these explicit movie features are **not available**."
+    "* The subsequent lesson will begin developing an algorithm to predict the missing ratings. The first model will temporarily assume that **features (extra information)** about the movies (e.g., whether it is a romance movie or an action movie) are already available. Later in the notes, we will address how to build the system when these explicit movie features are not available."
    ]
   },
   {
