doc-updated 'collaborative filtering algorithm'

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -129,7 +129,9 @@
    "cell_type": "markdown",
    "id": "49b379da-5907-4ff3-8e6d-965ff6c4a3ee",
    "metadata": {},
-   "source": []
+   "source": [
+    "<br>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -138,24 +140,20 @@
    "source": [
     "## 3. Collaborative filtering algorithm\n",
     "\n",
-    "This section introduces **Collaborative Filtering**, a powerful technique for recommender systems where the item features ($\\mathbf{x}$) are **learned from the user ratings** rather than being provided in advance.\n",
+    "This section introduces **Collaborative Filtering**, a powerful technique for recommender systems where the item features ($\\mathbf{x}$) are learned from the user ratings rather than being provided in advance.\n",
     "\n",
     "---\n",
+    "### 1. The Challenge: Learning Item Features ($\\mathbf{x}$)\n",
+    "In the previous model, we assumed movie features ($\\mathbf{x}$) were known (e.g., Romance, Action level). In the new new approach, when features are unknown, the ratings provided by multiple users on the same item can be leveraged to learn what those item features ($\\mathbf{x}$) should be.\n",
     "\n",
-    "### Key Bullet Points: Collaborative Filtering Algorithm\n",
+    "**Why it Works:** Having ratings from several users (each with known preference parameters $\\mathbf{w}$ and $b$) allows the system to infer the features of an unfeatured movie that best explain those ratings. This relies on the \"collaboration\" of ratings from multiple users on the same item, which defines algorithm's name.\n",
     "\n",
-    "#### 1. The Challenge: Learning Item Features ($\\mathbf{x}$)\n",
-    "* **Previous Model:** Assumed movie features ($\\mathbf{x}$) were known (e.g., Romance, Action level).\n",
-    "* **New Approach:** When features are unknown, the ratings provided by **multiple users** on the same item can be leveraged to learn what those item features ($\\mathbf{x}$) should be.\n",
-    "    * **Why it Works:** Having ratings from several users (each with known preference parameters $\\mathbf{w}$ and $b$) allows the system to infer the features of an unfeatured movie that best explain those ratings.\n",
-    "    * **Collaborative Filtering Name:** This relies on the \"collaboration\" of ratings from multiple users on the same item.\n",
-    "\n",
-    "#### 2. Cost Function for Learning Features ($\\mathbf{x}$)\n",
+    "### 2. Cost Function for Learning Features ($\\mathbf{x}$)\n",
     "If the user preference parameters ($\\mathbf{w}^{(j)}, b^{(j)}$) are temporarily fixed, the features for a single movie $i$ ($\\mathbf{x}^{(i)}$) are learned by minimizing the cost function:\n",
     "\n",
     "$$\\min_{\\mathbf{x}^{(i)}} J(\\mathbf{x}^{(i)}) = \\frac{1}{2} \\sum_{j: r(i, j)=1} \\left( (\\mathbf{w}^{(j)} \\cdot \\mathbf{x}^{(i)} + b^{(j)}) - y^{(i, j)} \\right)^2 + \\frac{\\lambda}{2} \\sum_{k=1}^{n} (x_k^{(i)})^2$$\n",
     "\n",
-    "#### 3. The Full Collaborative Filtering Cost Function\n",
+    "### 3. The Full Collaborative Filtering Cost Function\n",
     "The final algorithm combines the objective of learning user preferences ($\\mathbf{w}, b$) and learning item features ($\\mathbf{x}$) into a single unified cost function ($J$):\n",
     "\n",
     "* **Minimization:** The algorithm simultaneously minimizes $J$ with respect to all parameters: the user parameters ($\\mathbf{w}^{(j)}, b^{(j)}$ for all users $j$) and the movie features ($\\mathbf{x}^{(i)}$ for all movies $i$).\n",
@@ -163,9 +161,8 @@
     "\n",
     "$$J(\\mathbf{w}, \\mathbf{b}, \\mathbf{x}) = \\frac{1}{2} \\sum_{(i, j): r(i, j)=1} \\left( (\\mathbf{w}^{(j)} \\cdot \\mathbf{x}^{(i)} + b^{(j)}) - y^{(i, j)} \\right)^2 + \\frac{\\lambda}{2} \\sum_{j=1}^{n_u} \\sum_{k=1}^{n} (w_k^{(j)})^2 + \\frac{\\lambda}{2} \\sum_{i=1}^{n_m} \\sum_{k=1}^{n} (x_k^{(i)})^2$$\n",
     "\n",
-    "#### 4. Optimization\n",
-    "* **Method:** Gradient Descent or other optimization algorithms are used to minimize the cost function $J$.\n",
-    "* **Parameters:** In this full formulation, both the user preferences ($\\mathbf{w}, \\mathbf{b}$) and the item features ($\\mathbf{x}$) are treated as parameters to be learned and are updated iteratively.\n",
+    "### 4. Optimization\n",
+    "Gradient Descent or other optimization algorithms are used to minimize the cost function $J$. In this full formulation, both the user preferences ($\\mathbf{w}, \\mathbf{b}$) and the item features ($\\mathbf{x}$) are treated as parameters to be learned and are updated iteratively.\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -176,7 +173,15 @@
     "$$\n",
     "\n",
     "### Next Step\n",
-    "The next discussion will address a generalization of this model to systems using **binary labels** (e.g., like/dislike) instead of continuous star ratings."
+    "The next section will address a generalization of this model to systems using binary labels (e.g., like/dislike) instead of continuous star ratings."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ccf1b0f-e04f-4692-b82b-bd7012414b66",
+   "metadata": {},
+   "source": [
+    "<br>"
    ]
   },
   {
