doc-updated 'Binary labels' section

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -194,38 +194,47 @@
     "This section explains how to adapt the collaborative filtering algorithm from predicting continuous ratings (like 1–5 stars) to predicting **binary labels** (like/dislike, purchase/not purchase), using a method analogous to moving from linear regression to logistic regression.\n",
     "\n",
     "---\n",
+    "### Binary Label Context\n",
+    "Many recommender systems deal with binary labels (1 or 0) rather than star ratings.\n",
     "\n",
-    "### Key Bullet Points: Collaborative Filtering with Binary Labels\n",
-    "\n",
-    "#### 1. Binary Label Context\n",
-    "* **Problem:** Many recommender systems deal with binary labels (1 or 0) rather than star ratings.\n",
     "* **Label Meanings (Engagement):**\n",
     "    * **1 (Engaged):** User liked, purchased, favorited, clicked, or spent a minimum time (e.g., 30 seconds) on an item after exposure.\n",
     "    * **0 (Not Engaged):** User did not like, did not purchase, or left quickly after being exposed to the item.\n",
     "    * **? (Question Mark):** The user was not yet exposed to the item (no rating/engagement data).\n",
     "* **Goal:** Predict the probability that a user will like or engage with a new item (the '?' items) to decide what to recommend.\n",
     "\n",
-    "#### 2. The Model: Logistic Regression Analogy\n",
-    "* **Prediction Shift:** The model shifts from predicting a numerical rating to predicting a probability of engagement.\n",
-    "* **Logistic Function:** The linear combination of user preferences ($\\mathbf{w}^{(j)}$) and item features ($\\mathbf{x}^{(i)}$) is passed through the logistic function ($g$) (also known as the sigmoid function).\n",
-    "    * **Probability Prediction:**\n",
-    "    $$\\text{P}(y^{(i, j)}=1) = g(\\mathbf{w}^{(j)} \\cdot \\mathbf{x}^{(i)} + b^{(j)})$$\n",
-    "    * Where $g(z) = \\frac{1}{1 + e^{-z}}$.\n",
+    "### The Model: Logistic Regression Analogy\n",
+    "The model shifts from predicting a numerical rating to predicting a probability of engagement. The linear combination of user preferences ($\\mathbf{w}^{(j)}$) and item features ($\\mathbf{x}^{(i)}$) is passed through the logistic function ($g$) (also known as the sigmoid function).\n",
     "\n",
-    "#### 3. The Cost Function: Binary Cross-Entropy\n",
-    "* **Cost Function Modification:** Since the output is a probability and the labels are binary, the squared error cost function (used for ratings) is replaced with the Binary Cross-Entropy Loss (or log loss), which is standard for logistic regression.\n",
+    "$$\\text{P}(y^{(i, j)}=1) = g(\\mathbf{w}^{(j)} \\cdot \\mathbf{x}^{(i)} + b^{(j)})$$\n",
+    "\n",
+    "where $g(z) = \\frac{1}{1 + e^{-z}}$.\n",
+    "\n",
+    "### The Cost Function: Binary Cross-Entropy\n",
+    "Since the output is a probability and the labels are binary, the squared error cost function (used for ratings) is replaced with the Binary Cross-Entropy Loss (or log loss), which is standard for logistic regression.\n",
+    "\n",
     "* **Loss for a Single Example:**\n",
     "    $$L(f(\\mathbf{x}), y) = -y \\log(f(\\mathbf{x})) - (1-y) \\log(1-f(\\mathbf{x}))$$\n",
     "* **Overall Binary Collaborative Filtering Cost ($J$):** The total cost function sums this binary cross-entropy loss over all user-item pairs where a rating/engagement exists ($r^{(i, j)}=1$), plus the regularization terms for all $\\mathbf{w}$, $\\mathbf{b}$, and $\\mathbf{x}$.\n",
     "\n",
-    "#### 4. Generalization\n",
+    "$$J(\\mathbf{w}, \\mathbf{b}, \\mathbf{x}) = \\sum_{(i, j): r(i, j)=1} L(f(x^{(i)}), y^{(i,j)}) + \\frac{\\lambda}{2} \\sum_{j=1}^{n_u} \\sum_{k=1}^{n} (w_k^{(j)})^2 + \\frac{\\lambda}{2} \\sum_{i=1}^{n_m} \\sum_{k=1}^{n} (x_k^{(i)})^2$$\n",
+    "\n",
+    "### Generalization\n",
     "* This generalization significantly opens up the set of applications that can be addressed by collaborative filtering, allowing the algorithm to work with implicit feedback (like clicks or viewing time) rather than requiring explicit user ratings."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b144d958-e503-4659-b428-1ddbd3b7aee4",
+   "metadata": {},
+   "source": [
+    "<br>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cd7752d-48ad-4241-93ca-b14d315acbed",
+   "id": "d9932e04-098e-44e3-b72e-e5aa77ef9be1",
    "metadata": {},
    "outputs": [],
    "source": []
